# TodoListBot

./: .clinerules  .dockerignore  .env.example  .gitignore  ANTI-PATTERNS.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: tests.yml
src/todo_bot/: __init__.py  bot.py  config.py  exceptions.py  health.py  main.py  messages.py  scheduler.py  validators.py
src/todo_bot/cogs/: __init__.py  tasks.py
src/todo_bot/models/: __init__.py  task.py
src/todo_bot/storage/: __init__.py  base.py  sqlite.py
src/todo_bot/utils/: __init__.py  formatting.py
src/todo_bot/views/: __init__.py  registry.py  task_view.py
tests/: __init__.py  conftest.py  test_bot.py  test_cogs.py  test_cogs_extended.py  test_config.py  test_exceptions.py  test_formatting.py  test_formatting_extended.py  test_health.py  test_main.py  test_messages.py  test_registry.py  test_rollover.py  test_scheduler.py  test_storage.py  test_storage_extended.py  test_task_model.py  test_validators.py  test_views.py
